--- a/doc/icml2019_ofvf/ofvf.tex
+++ b/doc/icml2019_ofvf/ofvf.tex
@@ -153,12 +153,21 @@ Our work
 
 
 \section{Problem formulation}
+
 We consider the problem of learning and solving an uncertain
- MDP :$(S,A,P^Ma, R^M,)$ 
+MDP :$(S, A, P^M, R^M)$ where $S = {1,...,S}$ is the state space, $A =
+{1,...,A}$ is the action space, $R^M(a,s)$ is the believe distribution over
+true reward when take action $a$ at state $s$, $P^M(s'|s,a)$ is the
+believe distribution over the true transition probability of
+transitioning to state $s'$ when take action $a$ at state $s$.
+
+value function
+
+regret definition
 
 \section{OFVF and Bayes UCRL}
 
-\begin{algorithm}
+\begin{algorithm}[H]
 	 \KwIn{Distribution $\theta$ over $p\opt_{s,a}$, confidence level $\delta$, sample count $m$}
 	 \KwOut{Nominal point $\bar{p}_{s,a}$ and $L_1$ norm size $\psi_{s,a}$}
 	 Sample $X_1, \ldots, X_m \in \Delta^S$ from $\theta$: $X_i \sim \theta $\;
@@ -169,7 +178,7 @@ We consider the problem of learning and solving an uncertain
 	 \caption{Bayesian Confidence Interval (BCI)} \label{alg:bayes}
 \end{algorithm}
 
-\begin{algorithm}
+\begin{algorithm}[H]
 	 \KwIn{Desired confidence level $\delta$ and prior distribution }
 	 \KwOut{Policy with an optimistic return estimate }
 		 \Repeat{num episodes}{
@@ -178,7 +187,7 @@ We consider the problem of learning and solving an uncertain
 		 Compute posterior: $\tilde{p} \gets$ compute\_posterior(prior, samples) \;
 		
 		 \ForEach{$s \in \mathcal{S}, a \in \mathcal{A}$}{%
-			 $\bar{p}_{s,a}, \psi_{s,a} \gets$ Invoke Algortihm \ref{alg:bayes} with $\tilde{p}$, $\delta$\;
+			 $\bar{p}_{s,a}, \psi_{s,a} \gets$ Invoke Algorithm \ref{alg:bayes} with $\tilde{p}$, $\delta$\;
 			 $M \gets \text{add transition with } \bar{p}_{s,a}, \psi_{s,a}$\;
 		 }
 		 Compute policy by solving MDP: $\hat{\pi} \gets$ Solve $M$\;
@@ -189,13 +198,61 @@ We consider the problem of learning and solving an uncertain
 	 \caption{Bayes UCRL}    \label{alg:IAVF}
 \end{algorithm} 
 
+Description about Bayes UCRL
+
+pseudocode of OFVF and description
+
 \section{Some shortcomings of existing UCRL2 and PSRL}
+
+PSRL only have bound on Bayes Regret
+
+UCRL2 have bound on regular Regret but loose
+
+OFVF have better bound on regular Regret.
+
+OFVF have better performance on worst case scenario.
+
+On average case, OFVF would require less samples to produce same
+performance.
+
 
 \section{Analysis}
 
+Theoretical proof:
+
+Definition 1
+
+Theorem 1
+
+Lemma 1
+
+Conjecture 1
+
 \section{Simulation results}
 
+something about RiverSwim
+
+something about Inventory
+
+something about MountainCar
+
+\begin{figure}[H]
+	\centering
+	\begin{minipage}[c]{.45\columnwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/SimpleProblem_PSRL_BayesUCRL_OFVF.png}
+	\end{minipage}%
+	\begin{minipage}[c]{.45\columnwidth}
+		\centering
+		\includegraphics[width=\linewidth]{figures/RiverSwim_RSVF_BAYESUCB_PSRL.png}
+	\end{minipage}%
+	\caption{Cumulative regrets of PSRL and Bayes UCRL: left) above described simple problem, right) RiverSwim Problem described in \citep{Osband2013}}
+	\label{fig:dirichlet_result}
+\end{figure}
+
 \section{Conclusion}
+
+Summarize the paper
 
 % Acknowledgements should only appear in the accepted version.
 \section*{Acknowledgements}
