--- a/doc/icml2019_ofvf/icml2018.sty
+++ b/doc/icml2019_ofvf/icml2018.sty
@@ -76,7 +76,7 @@
 % Use fancyhdr package
 \RequirePackage{fancyhdr}
 \RequirePackage{color}
-\RequirePackage{algorithm}
+%\RequirePackage{algorithm}
 \RequirePackage{algorithmic}
 \RequirePackage{natbib}
 \RequirePackage{eso-pic} % used by \AddToShipoutPicture 
