ignore bibtex generated files

--- a/doc/icml2019_ofvf/ofvf.bib
+++ b/doc/icml2019_ofvf/ofvf.bib
@@ -73,3 +73,14 @@
   number =	 "3",
   pages =	 "211--229"
 }
+
+@article{strehl2008analysis,
+  title={An analysis of model-based interval estimation for Markov decision processes},
+  author={Strehl, Alexander L and Littman, Michael L},
+  journal={Journal of Computer and System Sciences},
+  volume={74},
+  number={8},
+  pages={1309--1331},
+  year={2008},
+  publisher={Elsevier}
+}
